
  * Run hw-detect to set up /etc/modules properly (closes: Malone #40826).
  * Mimic base-installer's logic to configure initramfs-tools with an
    appropriate resume partition (closes: Malone #42299).
  * Fix logging in apply_keyboard.
  * Handle trfu/trqu console keymaps the same way as trf/trq (closes: Malone
    #37867).
  * Map croat console keymap to hr (closes: Malone #43598).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  8 May 2006 01:16:21 +0100

ubiquity (0.99.76) dapper; urgency=low

  * Make deselection of mount points actually have a useful effect on
    partman_commit (closes: Malone #35079).

 -- Colin Watson <cjwatson@ubuntu.com>  Sat,  6 May 2006 00:09:22 +0100

ubiquity (0.99.75) dapper; urgency=low

  * KDE frontend:
    - Fix resize slider handling in autopartitioner (closes: Malone #43015).
    - Fix handling of disk selections (closes: Malone #43125).
  * When committing the results of manual partitioning, tell partman to run
    update.d scripts before asking the confirmation question, rather than
    trying to run them ourselves and doing it wrong (closes: Malone #37872).
  * GTK frontend:
    - Allow deselecting mount points in manual partitioner (closes: Malone
      #40588).
  * Hide mount point errors after successful manual partitioning, to make
    sure that they don't appear if you go back from the summary page.
  * Automatic update of included source packages: partman-base
    78ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  5 May 2006 21:11:15 +0100

ubiquity (0.99.74) dapper; urgency=low

  * Tolerate partman doing METAGET on questions that don't exist (closes:
    Malone #42967).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  4 May 2006 19:17:45 +0100

ubiquity (0.99.73) dapper; urgency=low

  * Mark file descriptors connected to debconf-communicate as close-on-exec
    (requires debconf 1.4.72ubuntu5; closes: Malone #42868).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  4 May 2006 10:11:46 +0100
